corrigindo botão de remoção única

--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
                         <p class="situacao"> Pendente </p>
                     </td>
                     <td>
-                        <button class="botao-remover btn btn-outline-danger btn-sm" type="submit" onclick="excluirLinha(this)">X</button>
+                        <button class="botao-remover btn btn-outline-danger btn-sm" type="submit"
+                            id="botaoRemover">X</button>
                     </td>
                 </tr>
                 <tr id="aluno2" class="tr">
@@ -72,7 +73,8 @@
                         <p class="situacao"> Pendente </p>
                     </td>
                     <td>
-                        <button class="botao-remover btn btn-outline-danger btn-sm" type="submit" onclick="excluirLinha(this)">X</button>
+                        <button class="botao-remover btn btn-outline-danger btn-sm" type="submit"
+                            id="botaoRemover">X</button>
                     </td>
                 </tr>
             </tbody>
