--- a/index.html
+++ b/index.html
@@ -109,7 +109,8 @@
                     class="btn btn-primary btn-block">
                 <label for="cor" class="example-color-input">Mudar a cor do fundo</label>
                 <input type="color" id="corForm" name="cor" onchange="mudaCor(event)" class="form-control">
-
+                <button type="button" class="btn btn-info btn-sm"
+                    onclick='(function(){window.location.href ="https://www.bbc.com/portuguese"}())'> BBC </button>
 
             </form>
         </div>
