--- a/portifolio.html
+++ b/portifolio.html
@@ -2,14 +2,162 @@
 <html>
 
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+        integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <title>Portfolio</title>
     <link href="css/portifolio.css" rel="stylesheet">
 </head>
 
 <body>
-    
+    <div class="container">
+        <h3> Preto e Branco </h3>
+        <DIV class="row justify-content-md-center">
+            <div id="carousel1" class="carousel slide text-center" data-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <div class="container">
+                            <img class="d-block w-100"
+                                src="https://drscdn.500px.org/photo/1009809226/m%3D900/v2?sig=69502323c0bf02f66d69ae1bb3c0ee19ad668e8f7394e2f6bec6b37e7758be3d"
+                                alt="Primeiro Slide">
 
+                            <div class="carousel-caption d-none d-md-block align-items-end">
+                                <h5>...</h5>
+                                <p class="descript"> Nikon D810A <br>
+                                    70.0-200.0mm - ƒ/2.8 <br>
+                                    ƒ/29.0 - 1/40s - ISO 100</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="container">
+                            <img class="d-block w-100"
+                                src="https://drscdn.500px.org/photo/64477993/m%3D900/v2?sig=2eb08eb31a340ac4060d7a3cb85af76f70efb7fc5530d26462b9659ca8a3dcc2"
+                                alt="Segundo Slide">
+                        </div>
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>...</h5>
+                            <p class="descript"> Canon EOS 5D Mark II <br>
+                                17-40mm ƒ/4L USM <br>
+                                24mm - ƒ/22 - 180s - ISO 50 </p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="container">
+                            <img class="d-block w-100"
+                                src="https://drscdn.500px.org/photo/32390141/m%3D900/v2?sig=3484e03f11c4aab1aa417ce8b33b6262aae42779c2862de63740743dddf319ce"
+                                alt="Terceiro Slide">
+                        </div>
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>...</h5>
+                            <p class="descript"> Pentax K-5 II <br>
+                                108mm - ƒ/8 - 1/500s - ISO 400</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100"
+                            src="https://drscdn.500px.org/photo/127474923/m%3D900/v2?sig=1db5481e548fb81c2320e15453415f4b1bc1a34de45dd4aeba6f984ebab43ac4"
+                            alt="Quarto Slide">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>...</h5>
+                            <p class="descript"> Fujifilm X100S <br>
+                                23mm - ƒ/7.1 - 1/2400s - ISO 200</p>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- botoes para ir e voltar nas fotos.  -->
+                <a class="carousel-control-prev" href="#carousel1" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Anterior</span>
+                </a>
+                <a class="carousel-control-next" href="#carousel1" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Próximo</span>
+                </a>
+            </div>
+        </DIV>
+        <h3>Macrofotografia </h3>
+        <DIV class="row justify-content-md-center">
+            <div id="carousel2" class="carousel slide text-center" data-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <div class="container">
+                            <img class="d-block w-100"
+                                src='https://drscdn.500px.org/photo/66557157/m%3D900/v2?sig=12500cb072697ef6c3a04cb8a0ac19829a07caad84128b117a5ed83da591f0f5'
+                                alt="Blue winter by Heidi Westum">
+
+                            <div class="carousel-caption d-none d-md-block align-items-end">
+                                <h5>...</h5>
+                                <p class="descript"> Nikon D810A <br>
+                                    70.0-200.0mm - ƒ/2.8 <br>
+                                    ƒ/29.0 - 1/40s - ISO 100</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="container">
+                            <img class="d-block w-100"
+                                src='https://drscdn.500px.org/photo/62249987/m%3D900/v2?sig=c7f8580e27a0c3c54262d1a5e900e5e9e8afdb00bfa52b23d79e9a86244d6603'
+                                alt='glowing raspberries by Samantha Durfee'>
+                        </div>
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>...</h5>
+                            <p class="descript"> Canon EOS 5D Mark II <br>
+                                17-40mm ƒ/4L USM <br>
+                                24mm - ƒ/22 - 180s - ISO 50 </p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="container">
+                            <img class="d-block w-100"
+                                src='https://drscdn.500px.org/photo/88786961/m%3D900/v2?sig=a884db7b799c307c052c3e93afd1542660fb1a06afa05dddd14ba72ab619dc6c'
+                                alt='go!! by Ondrej Pakan'>
+                        </div>
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>...</h5>
+                            <p class="descript"> Pentax K-5 II <br>
+                                108mm - ƒ/8 - 1/500s - ISO 400</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100"
+                            src='https://drscdn.500px.org/photo/70830593/m%3D900/v2?sig=771c5205d03ca8b4150a388318c8fd1be22b3fe4c1f6546bb17c01637edccd9d'
+                            alt='poppy head by Samantha Durfee'>
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>...</h5>
+                            <p class="descript"> Fujifilm X100S <br>
+                                23mm - ƒ/7.1 - 1/2400s - ISO 200</p>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- botoes para ir e voltar nas fotos.  -->
+                <a class="carousel-control-prev" href="#carousel2" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Anterior</span>
+                </a>
+                <a class="carousel-control-next" href="#carousel2" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Próximo</span>
+                </a>
+            </div>
+        </DIV>
+    </div>
+
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+        integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+        integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+        crossorigin="anonymous"></script>
+    <script type=' text/javascript' src='https://500px.com/embed.js' async></script>
     <script src="js/portifolio.js"></script>
 </body>
 
